--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ body {
     
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
-    --gutter: 30px;
+    /* --gutter: 30px; */
     --footer-height: 25px;
     
     font-family: 'Titillium Web', sans-serif;
@@ -34,8 +34,8 @@ body {
 main {
     display: flex;
     width: 100%;
+    height: 100%;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     margin-bottom: calc(var(--footer-height));
 }
@@ -48,8 +48,10 @@ main {
 
 .chart{
     position: relative; 
-    height:40vh; 
-    width:40vw
+    height:20vh; 
+    width:20vw;
+    margin-bottom: 50px;
+    padding: 25px;
 
 }
 
